Added Dtest=* to global properties