@@ -18,7 +18,7 @@
       <archiveClasses>true</archiveClasses>
       <org.springframework.version>4.3.7.RELEASE</org.springframework.version>
       <!--       I declare argLine as a property so JaCoCo can set its agent proeprly. -->
-      <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea -Dfile.encoding=UTF-8</argLine>
+      <argLine>-Xms256m -Xmx512m -ea -Dfile.encoding=UTF-8 -Dtest=*</argLine>
    </properties>
    <prerequisites>
       <maven>3.3.9</maven>
@@ -278,7 +278,7 @@
                <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-surefire-plugin</artifactId>
-                  <version>2.13</version>
+                  <version>2.20</version>
                   <configuration>
                      <properties>
                         <property>
